--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -4,6 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown timer</title>
+    <style>
+      input {
+        width: 300px;
+        height: 50px;
+        font-size: x-large;
+      }
+      button {
+        width: 80px;
+        height: 50px;
+        font-size: x-large;
+      }
+      .timer {
+        display: flex;
+        gap: 25px;
+        margin-top: 15px;
+        margin-left: 15px;
+      }
+      .field {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .value {
+        font-size: 40px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+      }
+    </style>
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
